src/styles/layout.module.scss
.centered {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}


.fadedIn {
    opacity: 0;
	animation: fadeIn 1s ease-in both;
}

.fadedIn:nth-child(2) {
    animation-delay: 1s;
}

.fadedIn:nth-child(3) {
    animation-delay: 3s;
}

.fadedIn:nth-child(4) {
    animation-delay: 3s;
}

@keyframes fadeIn {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@keyframes slideDown {
	from {
		transform: translate3d(0, -20%, 0);
	}
	to {
		transform: translate3d(0, 0, 0);
	}
}

.fullScreen {
	height: calc(100vh - 100px);
	color: white;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.pillButton {
	border: 1px solid white;
	display: inline-block;
	padding: 0.5rem;
	margin: 0.75rem 1rem 0 0;
	border-radius: 20px;
	box-shadow: 2px 2px 5px 0 black ;
}

.circularPhoto {
	// margin-left: auto;
	// img {
	border-radius: 50%;
		
	// }
	flex-grow: 0;
	width: 200px;
	height: 200px;
	margin-left: 1rem;
	box-shadow: 5px 5px 10px 0 black ;
}

.aboutContent {
	display: flex;
	margin-top: 2rem;
	margin-bottom: 3rem;
}

.aboutText {
	flex-grow: 1;
}
@media only screen and (max-width: 905px) {
    .aboutContent {
		display: block;
		margin-bottom: 6rem;
	}
	.circularPhoto {
		margin: 0 auto 3rem auto;
	}
}

